2011-08-16  Pavel Feldman  <pfeldman@google.com>

        Web Inspector: convert DOM breakpoint types to strings.
        https://bugs.webkit.org/show_bug.cgi?id=66304

        Reviewed by Yury Semikhatsky.

        * inspector/Inspector.json:
        * inspector/InspectorDOMDebuggerAgent.cpp:
        (WebCore::domTypeForName):
        (WebCore::InspectorDOMDebuggerAgent::setDOMBreakpoint):
        (WebCore::InspectorDOMDebuggerAgent::removeDOMBreakpoint):
        * inspector/InspectorDOMDebuggerAgent.h:
        * inspector/front-end/DOMBreakpointsSidebarPane.js:
        (WebInspector.DOMBreakpointsSidebarPane):

2011-08-16  Pavel Feldman  <pfeldman@google.com>

        Web Inspector: force pseudo element state when checking it in the styles sidebar.
        https://bugs.webkit.org/show_bug.cgi?id=66292

        This reverts http://trac.webkit.org/changeset/89132 and introduces InspectorInstrumentation
        calls from the CSSStyleSelector for pseudo state processing. These calls are very fast:
        they are guarded with the inline checks for the front-end count.

        Reviewed by David Hyatt.

        * css/CSSStyleSelector.cpp:
        (WebCore::CSSStyleSelector::initForStyleResolve):
        (WebCore::CSSStyleSelector::styleRulesForElement):
        (WebCore::CSSStyleSelector::pseudoStyleRulesForElement):
        (WebCore::CSSStyleSelector::checkSelector):
        (WebCore::CSSStyleSelector::SelectorChecker::checkSelector):
        (WebCore::CSSStyleSelector::SelectorChecker::checkOneSelector):
        * css/CSSStyleSelector.h:
        * inspector/InspectorCSSAgent.cpp:
        (WebCore::computePseudoClassMask):
        (WebCore::InspectorCSSAgent::InspectorCSSAgent):
        (WebCore::InspectorCSSAgent::clearFrontend):
        (WebCore::InspectorCSSAgent::forcePseudoState):
        (WebCore::InspectorCSSAgent::getStylesForNode):
        (WebCore::InspectorCSSAgent::didRemoveDocument):
        (WebCore::InspectorCSSAgent::didRemoveDOMNode):